# nexus

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  LICENSE  README.md  agentgateway.yaml  config.example.yaml  docker-compose.yaml  pyproject.toml  topology.yaml
.github/workflows/: ci.yaml
docs/: demo-script.md  extension-development.md  index.md  quickstart.md
docs/architecture/: memory.md  multi-tenant.md  overview.md
docs/design/: channel-monitoring.md  conversation.md  extensions.md  finance.md  integrations.md  model-routing.md  persona.md  printing-press.md  scheduler.md  security.md  transport.md  work-assistant.md  work-intelligence.md
docs/plans/: m1-implementation.md  m2-wave-a-implementation.md  m2-wave-b-implementation.md  m3-wave-a-implementation.md  m3-wave-b-implementation.md  m4-implementation.md  m6-implementation.md  m7-implementation.md
docs/research/: competitive-analysis.md
docs/reviews/: codebase-audit.md  codebase-review-2026-05-09.md  deployment-fix-audit.md
docs/vision/: milestones.md  prd.md
extensions/nexus-finance/: pyproject.toml
extensions/nexus-finance/docker/: mfapi.Dockerfile  mfapi_mcp.py  zerodha.Dockerfile  zerodha_mcp.py
extensions/nexus-finance/src/nexus_finance/: __init__.py  charts.py  commands.py  extension.py  gold.py  indicators.py  portfolio.py  research.py  schema.py
extensions/nexus-finance/src/nexus_finance/parsers/: hdfc.py  sbi.py
extensions/nexus-finance/src/nexus_finance/skills/bank-statement-parse/: SKILL.md
extensions/nexus-finance/src/nexus_finance/skills/finance-alert/: SKILL.md
extensions/nexus-finance/src/nexus_finance/skills/finance-reminder/: SKILL.md
extensions/nexus-finance/src/nexus_finance/skills/fire-check/: SKILL.md
extensions/nexus-finance/src/nexus_finance/skills/gold-analysis/: SKILL.md
extensions/nexus-finance/src/nexus_finance/skills/mf-research/: SKILL.md
extensions/nexus-finance/src/nexus_finance/skills/portfolio-review/: SKILL.md
extensions/nexus-finance/src/nexus_finance/skills/rebalance/: SKILL.md
extensions/nexus-finance/tests/: test_commands.py  test_extension.py  test_gold.py  test_indicators.py  test_portfolio.py  test_research.py
extensions/nexus-work/: pyproject.toml
extensions/nexus-work/src/nexus_work/: briefing.py  commands.py  extension.py  priority.py  schema.py  signals.py
extensions/nexus-work/src/nexus_work/skills/work-action-extract/: SKILL.md
extensions/nexus-work/src/nexus_work/skills/work-delegation-check/: SKILL.md
extensions/nexus-work/src/nexus_work/skills/work-evening-wrap/: SKILL.md
extensions/nexus-work/src/nexus_work/skills/work-meeting-prep/: SKILL.md
extensions/nexus-work/src/nexus_work/skills/work-morning-briefing/: SKILL.md
extensions/nexus-work/tests/: test_briefing.py  test_commands.py  test_extension.py  test_priority.py  test_signals.py
personas/: default.md  dross.md
skills/heartbeat/: SKILL.md
skills/morning-briefing/: SKILL.md
src/nexus/: __init__.py  __main__.py  cli.py  config.py  extensions.py  logging_config.py  ratelimit.py  runtime.py  utils.py
src/nexus/agents/: __init__.py  compressor.py  conversation.py  help.py  intent.py  memory.py  response_formatter.py  scheduler.py  tool_executor.py
src/nexus/dashboard/: __init__.py  gateway.py  server.py  views.py
src/nexus/dashboard/static/: chat.html  finance.html  index.html  work.html
src/nexus/governance/: audit.py  policy.py  trust.py
src/nexus/llm/: __init__.py  client.py
src/nexus/mcp/: manager.py
src/nexus/media/: handler.py  stt.py  vision.py
src/nexus/models/: __init__.py  profile.py  session.py  tenant.py
src/nexus/persona/: __init__.py  loader.py
src/nexus/skills/: __init__.py  manager.py  parser.py
src/nexus/transport/: __init__.py  base.py  cli.py  discord.py  slack.py  telegram.py  web.py
tests/: conftest.py
tests/integration/: test_crash_recovery.py  test_first_boot.py
tests/unit/: test_audit.py  test_cli.py  test_cli_transport.py  test_compressor.py  test_config.py  test_content_store.py  test_conversation.py  test_dashboard_gateway.py  test_dashboard_server.py  test_discord_transport.py  test_extensions.py  test_help.py  test_intent.py  test_llm_client.py  test_logging_config.py  test_main.py  test_mcp_manager.py  test_media.py  test_memory.py  test_model_routing.py  test_persona.py  test_policy.py  test_profile.py  test_ratelimit.py  test_response_formatter.py  test_runtime.py  test_scheduler.py  test_scheduler_cron.py  test_session.py  test_skill_manager.py  test_skill_parser.py  test_slack_transport.py  test_stt.py  test_task_routing.py  test_telegram_formatting.py  test_telegram_transport.py  test_tenant.py  test_tool_executor.py  test_transport.py  test_trust.py
