[project]
name = "nexus"
version = "0.1.0"
description = "The reliable personal AI assistant — built on Civitas, governed by Presidium."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Jeryn Mathew Varghese", email = "jerynmathew@gmail.com" },
]
keywords = ["ai", "agent", "personal-assistant", "civitas", "presidium"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "civitas>=0.1.0",
    "python-telegram-bot>=21.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "typer>=0.20.0",
    "rich>=13.0",
    "croniter>=6.0.0",
    "aiosqlite>=0.20.0",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
otel = [
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp>=1.28",
]
voice = [
    "openai>=2.8.0",
]

[project.scripts]
nexus = "nexus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=nexus --cov-fail-under=85 -v"
