[project]
name = "nexus"
version = "0.1.0"
description = "The reliable personal AI assistant — built on Civitas, governed by Presidium."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Jeryn Mathew Varghese", email = "1854382+jerynmathew@users.noreply.github.com" },
]
keywords = ["ai", "agent", "personal-assistant", "civitas", "presidium"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "civitas>=0.3.0",
    "python-telegram-bot~=21.0",
    "httpx~=0.28.0",
    "pydantic~=2.12",
    "typer~=0.20.0",
    "rich~=13.0",
    "croniter~=6.0",
    "aiosqlite~=0.20.0",
    "mcp~=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "pytest-asyncio>=0.24,<0.26",
    "pytest-cov~=5.0",
    "ruff~=0.15",
    "mypy~=1.13",
    "pre-commit~=4.0",
    "types-pyyaml~=6.0",
]
otel = [
    "opentelemetry-api~=1.28",
    "opentelemetry-sdk~=1.28",
    "opentelemetry-exporter-otlp~=1.28",
]
voice = [
    "faster-whisper~=1.0",
]
docs = [
    "pdfplumber~=0.11",
]
discord = [
    "discord.py~=2.3",
]
slack = [
    "slack-bolt~=1.20",
]

[project.scripts]
nexus = "nexus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "T20",    # flake8-print (no print() in source)
    "N",      # pep8-naming
    "C90",    # mccabe complexity
    "PLR",    # pylint refactor (includes too-many-statements)
    "RUF",    # ruff-specific rules
]
ignore = [
    "PLR2004",  # magic-value-comparison — too noisy for config/test code
    "PLR0913",  # too-many-arguments — agents have legitimate multi-param constructors
    "RET504",   # unnecessary-assign — sometimes aids readability
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "PLR0915", "N802", "SIM"]
"src/nexus/transport/cli.py" = ["T20"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "civitas.*",
    "telegram.*",
    "croniter.*",
    "faster_whisper.*",
    "pdfplumber.*",
    "discord.*",
    "slack_bolt.*",
]
ignore_missing_imports = true
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = [
    "nexus.agents.*",
    "nexus.dashboard.server",
    "nexus.runtime",
    "nexus.transport.discord",
    "nexus.transport.slack",
]
disallow_untyped_calls = false
disable_error_code = ["misc", "attr-defined", "untyped-decorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=nexus --cov-fail-under=85 -v"
