[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-work"
version = "0.1.0"
description = "Work intelligence extension for Nexus — chief of staff as software"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "nexus>=0.1",
]

[project.entry-points."nexus.extensions"]
work = "nexus_work.extension:WorkExtension"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_work"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
